--- a/1.html
+++ b/1.html
@@ -1,23 +1,26 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB - html</title>
+<title>코딩 공부-생활코딩</title>
 <meta charset="utf-8">
 </head>
 
 <body>
-	<h1><a href="index.html">WEB</a></h1>
+	<h1><a href="index.html">코딩공부를 하자!</a></h1>
 	<ol>
-		<li><a href="1.html">HTML</a></li>
-		<li><a href="2.html">CSS</a></li>
-		<li><a href="3.html">Javascript</a></li>
+		<li><a href="1.html">생활코딩</a></li>
+		<li><a href="2.html">FreeCodeCamp</a></li>
+		<li><a href="3.html">Elice</a></li>
 	</ol>
-	<h2>HTML</h2>
-	<p> <a href="https://www.w3.org/TR/html52/" target="_blank" title="html5 specification">Hypertext Markup Language (HTML)</a> is the standard markup language for <strong>creating <u>web</u> pages</strong> and web applications.
-	Web browsers receive HTML documents from a web server or from local storage and render them into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.
-	<img src="https://images.unsplash.com/photo-1529101091764-c3526daf38fe?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=43ef07555334a21b6c7dcecc929070ce&auto=format&fit=crop&w=1191&q=80" width="100%" >
+	<h2><a href="https://opentutorials.org/course/1" >생활코딩(무료)</a></h2>
+	<p> 
+	코딩을 처음 접하는 분들에게는 "코딩야학" 커리큘럼을 추천한다! 나도 이 강의를 통해서 인터넷, 클라이언트, 서버 등에 대한 이해, 언어에 대한 이해에 많은 도움이 되었다.
 	</p>
-	<p style ="margin-top: 45px;">
-	HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects, such as interactive forms, may be embedded into the rendered page. It provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. </p>
+	<p>
+	내가 원하는 것이 무엇인지 안다면, 아래 그림과 같이 웹페이지 상단에 대분류들이 있고 관심 있는 분야를 찾아 들어가보자! 
+	</p>
+	<img src="saengco.PNG" width="100%">
+	
+	
 </body>
 </html>
