--- a/3.html
+++ b/3.html
@@ -1,23 +1,27 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB - JavaScript</title>
+<title>코딩 공부-Elice</title>
 <meta charset="utf-8">
 </head>
 
 <body>
-	<h1><a href="index.html">WEB</a></h1>
+	<h1><a href="index.html">코딩공부를 하자!</a></h1>
 	<ol>
-		<li><a href="1.html">HTML</a></li>
-		<li><a href="2.html">CSS</a></li>
-		<li><a href="3.html">JavaScript</a></li>
+		<li><a href="1.html">생활코딩</a></li>
+		<li><a href="2.html">FreeCodeCamp</a></li>
+		<li><a href="3.html">Elice</a></li>
 	</ol>
-	<h2>JavaScript</h2>
+	<h2><a href="https://academy.elice.io/">Elice</a></h2>
 	<p> 
-	JavaScript (/ˈdʒɑːvəˌskrɪpt/),[7] often abbreviated as JS, is a high-level, interpreted programming language. It is a language which is also characterized as dynamic, weakly typed, prototype-based and multi-paradigm.
+	코딩 교육 플랫폼인 '엘리스(Elice)'는 벤처캐피탈 알토스벤처스로 부터 28억 원을 투자 받았다고 2018년 8월 13일 전해졌다.
 	</p>
 	<p>
-	Alongside HTML and CSS, JavaScript is one of the three core technologies of the World Wide Web.[8] JavaScript enables interactive web pages and thus is an essential part of web applications. The vast majority of websites use it,[9] and all major web browsers have a dedicated JavaScript engine to execute it.
+	엘리스는 카이스트 인공지능 박사과정 학생이 의기투합해 창업한 회사다. 자체 개발한 코딩플랫폼 '엘리스'와 온·오프라인 교육서비스 '엘리스 아카데미'를 운영 중이다.
 	</p>
+	<p>
+	현재 진행중인 강의/프로젝트를 끝내면 해당 사이트에서 어떤 강의들이 있는지 구경 해보려고 한다.	
+	</p>
+	<img src="elice.PNG" width="100%">
 </body>
 </html>
