--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB - Welcome</title>
+<title>코딩공부</title>
 <meta charset="utf-8">
 </head>
 
 <body>
-	<h1><a href="index.html">WEB</a></h1>
+	<h1><a href="index.html">코딩 공부를 하자!</a></h1>
 	<ol>
-		<li><a href="1.html">HTML</a></li>
-		<li><a href="2.html">CSS</a></li>
-		<li><a href="3.html">JavaScript</a></li>
+		<li><a href="1.html">생활코딩</a></li>
+		<li><a href="2.html">FreeCodeCamp</a></li>
+		<li><a href="3.html">Elice</a></li>
 	</ol>
-	<h2>WEB</h2>
+	<h2>코딩공부는 왜 시작 했는가?</h2>
 	<p> 
-	The World Wide Web (WWW), also called the Web, is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and accessible via the Internet.[1] English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser in 1990 while employed at CERN in Switzerland.[2][3] The browser was released outside CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+	첫 직장에서 SPSS를 통하여 시세예측프로그램을 만드는 Task Force Team에 참여헸었다. 그 때 SPSS를 사용하기 위하여 일종의 언어/코딩을 배웠다. 가르치던 강사가 나에게 소질이 있는 것 같다는 한 마디에 코딩과 통계를 공부해야겠다는 생각이 이상하게도 숙명으로 다가왔다.
 	</p>
 	<p>
-	The World Wide Web has been central to the development of the Information Age and is the primary tool billions of people use to interact on the Internet.[4][5][6] Web pages are primarily text documents formatted and annotated with Hypertext Markup Language (HTML).[7] In addition to formatted text, web pages may contain images, video, audio, and software components that are rendered in the user's web browser as coherent pages of multimedia content.
+	우연히 개발 업무를 하고 있는 친구의 소개로 생활코딩 페이스북 페이지를 알게 되었고, "코딩야학 2기"로 처음 공부해봤다. 본업으로 바쁘다 보니 공부를 못 하다가 2018년 7월부터 거의 매일매일 조금씩 공부하고 있다.
+	</p>
+	<p>
+	혹시 모르지.. 유통업과 무역업을 경험한 새로운 개발자가 탄생할지도!!!
 	</p>
 </body>
 </html>
