--- a/2.html
+++ b/2.html
@@ -1,23 +1,39 @@
 <!doctype html>
 <html>
 <head>
-<title>WEB - CSS</title>
+<title>코딩 공부-FreeCodeCamp</title>
 <meta charset="utf-8">
 </head>
 
 <body>
-	<h1><a href="index.html">WEB</a></h1>
+	<h1><a href="index.html">코딩공부를 하자!</a></h1>
 	<ol>
-		<li><a href="1.html">HTML</a></li>
-		<li><a href="2.html">CSS</a></li>
-		<li><a href="3.html">JavaScript</a></li>
+		<li><a href="1.html">생활코딩</a></li>
+		<li><a href="2.html">FreeCodeCamp</a></li>
+		<li><a href="3.html">Elice</a></li>
 	</ol>
-	<h2>CSS</h2>
+	<h2><a href="https://www.freecodecamp.org/" >FreeCodeCamp(무료)</a></h2>
 	<p> 
-	Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.[1] CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.[2]
+	내가 개발자로 전향을 할지는 모르겠지만, 우선 영어로 배워두면 좀 더 경쟁력 있는 개발자가 될 것 같다는 생각을 했다. 검색을 통해 꽤나 많은 사람들이 FreeCodeCamp라는 사이트의 Certification 수료 후에 실제로 직업을 구했다는 후기들이 있었다.
 	</p>
 	<p>
-	CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, and reduce complexity and repetition in the structural content
+	FreeCodeCamp의 좋은 점은 영어라는 점 외에도, 따로 소프트 웨어를 깔지 않아도 여러가지 과제들을 해결해가면서 배울 수 있다는 것. 그리고 동영상이 아니라 텍스트로 공부하기 때문에 고정 시간이 들지 않는 다는 점들이었다. (빨리 이해하면 빨리 넘어갈 수 있었고 모르는 부분은 반복해서 읽었다.)
 	</p>
+	<p>
+	Certification 종류는 아래와 같다.
+	<ul>
+	<li>Responsive Web Design Certification (300 hours)</li>
+	<li>Javascript Algorithms And Data Structures Certification (300 hours)</li>
+	<li>Front End Libraries Certification (300 hours)</li>
+	<li>Data Visualization Certification (300 hours)</li>
+	<li>Apis And Microservices Certification (300 hours)</li>
+	<li>Information Security And Quality Assurance Certification (300 hours)</li>
+	<li>Coding Interview Prep (Thousands of hours of challenges)</li>
+	</ul>
+	</p>
+	<p>
+	아래 그림은 Responsive Web Design Certification (300 hours) 과정 중의 한 부분이다.
+	</p>
+	<img src="freecodecamp.PNG" width="100%">
 </body>
 </html>
